@@ -57,6 +57,9 @@
 	- re-enable CDB locking, removing "private" from %%__dbi_cdb macro.
 	- popt aliases for -U et al to achieve dynamic link with nptl.
 	- add --file{class,provide,require} popt aliases and header extensions.
+	- statically link against /usr/lib/nptl/libpthread.a, if present.
+	- remove popt aliases for -U et al.
+	- add -I/usr/include/nptl, Conflicts: kernel <= 2.4.19.
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
